--- a/views/visit.erb
+++ b/views/visit.erb
@@ -18,12 +18,14 @@
     <input name="datetime" type="text" class="form-control" placeholder="Введите дату и время">
   </div>
 
-  <select>
-    <option name="barber" >Выберите парикмахера</option>
-    <option value="Walter White">Walter White</option>
-    <option value="Jessie Pinkman">Jessie Pinkman</option>
-    <option value="Gus Fring">Gus Fring</option>
-  </select><br><br>
+  <div class="form-group">
+    <label>Ваш парикмахер:</label>
+    <select class="form-control">
+      <option>Jessie Pinkman</option>
+      <option>Walter White</option>
+      <option>Gus Fring</option>
+    </select>
+  </div>
 
   <button type="submit" class="btn btn-primary">Записаться</button>
   
